	12111,Wrapped_Food: gets 3 of any food<- food or mixed food? Need to know so it can be implemented. [Skotlex]
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: Temporal Plug: 10z per mob-level on a 3% chance.
	1771,Venom_Knife: For new Asassins skill
		Item type: Throwing Dagger. Has to be equipped as an arrow, is consumed
		like gemstones when the skill is used.
	--
10/10
	* Changed GrandCross's duration to 900ms (changes nothing as the three hits
	  still happen at 0, 400 and 800ms) [Skotlex]
10/09
	* Fixed a few mob skills and mob stats. Thanks to MasterOfMuppets. [Nexon]
	* Fixed a few items having wrong stats. Thanks to Maud Dib. [Nexon]
10/08
	* Added missing ; at Bunny Slippers in item_db.txt. [Mass Zero]
	* Made a small change to Item_db. [Nexon]
	* Added Magic Scrolls drops, updated walkspeed of Kaho thanks to  MasterOfMuppets [Lupus]
10/07
	* Fixed a small error in Rawrel's stats. [Nexon]
	* Added a small change to Whikebain's drops. [Nexon]
	* Updated Mob drops and Lighthalzen exp gain. Thanks to MasterOfMuppets and Viccious_Pucca [Nexon]
	* Updated Item sell/buy price. [Nexon]
	* Added a new skill to a mob. [Nexon]
10/06
	* Updated the HP level of the normal second class mobs (as per info
	  provided through Viccious Pucca) [Skotlex]
	* Added "The Sign" to item_trade.txt (as per info provided through
	  Viccious), also made it add +5% atk. [Skotlex]
	* Corrected the item_trade.txt restrictions for Novice Potion (why you
	  couldn't place it in your cart, or sell it? o.O) [Skotlex]
	* Corrected G_Magaleta's elemental mode. [Skotlex]
	* Corrected Envenom's max skill level (7->10), and changed the attribute to
	  poison. [Skotlex]
	* Corrected Bloody Butterfly card so it doesn't makes spells
	  uninterruptable in WoE. [Skotlex]
	* Added skill data for various skills (second class quest skills and
	  several Tae-Kwon related jobs. All the info was acquired by Draco from
	  jA's information. [Skotlex]