@@ -2,6 +2,8 @@ Date	Added
 =======
 
 10/10
+	* Hardcoded the gender restrictions for items with view 13 & 14 (Musical
+	  Instruments and Whips), changed ignore_item_genders to yes as default. [Skotlex]
 	* Changed GX duration to 900ms. [Skotlex]
 	* Cleared up the item get times descriptions in battle_athena.conf [Skotlex]
 	* Some timer fixes in status_change_start regarding sc_data loading. [Skotlex]
