@@ -1017,8 +1017,8 @@ who_display_aid: 40
 display_hallucination: yes
 
 // Can any player equip any item regardless of the gender restrictions
-//	NOTE: Both Wedding Rings will still check the gender regardless of setting.
-ignore_items_gender: no
+//	NOTE: Wedding Rings and Whips/Musical Instruments will check gender regardless of setting.
+ignore_items_gender: yes
 
 // Can Rogues plagiarize advanced job skills           
 // 0 = no restriction
