@@ -848,8 +848,8 @@
 2104,Buckler_,Buckler,5,14000,,600,,4,,1,2020850,7,2,32,,0,1,2,{}
 2105,Shield,Shield,5,56000,,1300,,6,,0,16514,7,2,32,,0,1,3,{}
 2106,Shield_,Shield,5,56000,,1300,,6,,1,16514,7,2,32,,0,1,3,{}
-2107,Mirror_Shield,Mirror Shield,5,60000,,1000,,4,,0,16514,7,2,32,,0,1,4,{ bonus bMdef,3; }
-2108,Mirror_Shield_,Mirror Shield,5,60000,,1000,,4,,1,16514,7,2,32,,0,1,4,{ bonus bMdef,3; }
+2107,Mirror_Shield,Mirror Shield,5,60000,,1000,,4,,0,16514,7,2,32,,0,1,4,{ bonus bMdef,5; }
+2108,Mirror_Shield_,Mirror Shield,5,60000,,1000,,4,,1,16514,7,2,32,,0,1,4,{ bonus bMdef,5; }
 2109,Memorize_Book,Book of Summoning,5,,10,1000,,3,,0,66052,7,2,32,,0,1,0,{ bonus bInt,1; bonus bMdef,3; }
 2110,Holy_Guard,Holy Guard,5,,10,1400,,5,,0,16384,7,2,32,,68,0,3,{ bonus bVit,2; bonus bMdef,2; }
 2111,Evangelist,Evangelist,5,,10,1400,,5,,0,16384,7,2,32,,83,1,3,{ bonus bVit,3; bonus bInt,2; bonus bMdef,3; bonus bUnbreakableShield,0; }
